# learning-scout

./: .env.example  .gitignore  AUDIT.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  SECURITY.md  config.yaml  config.yaml.example  pyproject.toml  railway.toml  seen.json
.github/workflows/: scout.yml
learning_scout/: bot.py  cf_state_client.py  config_loader.py  formatter.py  github_writer.py  main.py  memory.py  models.py  scorer.py  scout.py  state_serde.py  telegram_bot.py
tests/: conftest.py  test_config_loader.py  test_formatter.py  test_github_writer.py  test_memory.py  test_scorer.py  test_scout.py  test_telegram_bot.py
worker/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml  wrangler.toml.example
worker/src/: index.ts
